--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongodb": "^4.10.0",
-    "node": "^18.10.0",
-    "react": "^18.2.0",
+    "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^4.17.2",
+    "node": "^18.20.4",
+    "react": "^18.3.1",
+    "update": "^0.4.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^3.1.7"
   },
   "keywords": []
 }
