--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^4.17.2",
-    "pnpm": "^9.14.2",
+    "pnpm": "^9.15.9",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "update": "^0.4.2",
+    "web-push": "^3.6.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.9"
   },
   "keywords": []
 }
